--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@vercel/analytics": "^1.0.1",
@@ -21,10 +20,13 @@
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react-big-calendar": "^1.6.4",
     "sass": "^1.63.5"
   }
 }
