--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   steps:
-  - name: Download zipfile
+  - name: Download Zip File
     run: curl https://www.gencon.com/downloads/events.zip -L -O events.zip
   - name: Unzip file
     run: 7z x
