--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -8,6 +8,10 @@ jobs:
   import-json:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        ref: ${{ github.event.pull_request.head.ref }}
     - name: Download Zip File
       run: curl https://www.gencon.com/downloads/events.zip -L -o events.zip
     - name: Unzip file
@@ -18,8 +22,6 @@ jobs:
         convert-excel-to-json --sourceFile="events.xlsx" > test.json
     - uses: EndBug/add-and-commit@v9
       with:
-        repository: ${{ github.event.pull_request.head.repo.full_name }}
-        ref: ${{ github.event.pull_request.head.ref }}
         remove: './frontend/assets/events/events2Parse.json'
         add: './frontend/assets/events/test.json'
         push: true
