--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -23,5 +23,4 @@ jobs:
     - uses: EndBug/add-and-commit@v9
       with:
         remove: './frontend/assets/events/events2Parse.json'
-        add: './frontend/assets/events/test.json'
-        push: true
+        add: 'test.json'
