--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -24,3 +24,5 @@ jobs:
       with:
         remove: './frontend/assets/events/events2Parse.json'
         add: 'test.json'
+        new_branch: testing-new-branch
+        push: false
