--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install convert-excel-to-json
       run: |
         npm install convert-excel-to-json \
-        convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/test3.json
+        npx convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/test.json
     - uses: EndBug/add-and-commit@v9
       with:
-        remove: '["test.json", "./frontend/assets/events/test.json"]'
-        add: './frontend/assets/events/test3.json'
+        remove: './frontend/assets/events/test3.json'
+        add: './frontend/assets/events/test.json'
