--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install convert-excel-to-json
       run: npm install convert-excel-to-json
     - name: Convert to JSON
-      run: npm convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/test.json
+      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/test.json
     - uses: EndBug/add-and-commit@v9
       with:
         remove: './frontend/assets/events/test3.json'
