--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -8,6 +8,9 @@ jobs:
   import-json:
     runs-on: ubuntu-latest
     steps:
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y%m%d%H%M%S')"
     - uses: actions/checkout@v3
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -22,8 +25,7 @@ jobs:
     - name: Install convert-excel-to-json
       run: npm install -g convert-excel-to-json
     - name: Convert to JSON
-      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/test1.json
+      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events-${{ steps.date.outputs.date }}.json
     - uses: EndBug/add-and-commit@v9
       with:
-        remove: './frontend/assets/events/test2.json'
-        add: './frontend/assets/events/test1.json'
+        add: './frontend/assets/events/events-${{ steps.date.outputs.date }}.json'
