--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -29,3 +29,9 @@ jobs:
     - uses: EndBug/add-and-commit@v9
       with:
         add: './frontend/assets/events/events-${{ steps.date.outputs.date }}.json'
+    - name: 'Count Files'
+      run: |
+        'COUNT=$(find "$DIR" -maxdepth 1 -mindepth 1 | wc -l)' \
+        echo '$COUNT'
+      env:
+        DIR: ./frontend/assets/events
