update using variables

--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -9,8 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y%m%d%H%M%S')"
+      run: echo "STORED_DATE=$(date +'%Y%m%d%H%M%S')"
     - uses: actions/checkout@v3
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -25,10 +24,11 @@ jobs:
     - name: Install convert-excel-to-json
       run: npm install -g convert-excel-to-json
     - name: Convert to JSON
-      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events-${{ steps.date.outputs.date }}.json
+      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events-$STORED_DATE.json
     - uses: EndBug/add-and-commit@v9
       with:
-        add: './frontend/assets/events/events-${{ steps.date.outputs.date }}.json'
+        add: './frontend/assets/events/events-$STORED_DATE.json'
     - name: 'Count Files'
-      id: count
-      run: echo "::set-output name=count::$( find ./frontend/assets/events -type f | wc -l)"
+      run: |
+        "FILE_COUNT=$( find ./frontend/assets/events -type f | wc -l)" \
+        echo $FILE_COUNT
