--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -33,5 +33,8 @@ jobs:
         add: './frontend/assets/events/events-${{ env.STORED_DATE }}.json'
     - name: Count files
       run: echo "FILE_COUNT=$( find ./frontend/assets/events -type f | wc -l)" >> $GITHUB_ENV
-    - name: Print file count
-      run: echo $FILE_COUNT
+    - name: Remove oldest file
+      if: $FILE_COUNT > 2
+      uses: EndBug/add-and-commit@v9
+      with:
+        remove: '$(find ./frontend/assets/events ls -rt | head -n 1)'
