--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -35,6 +35,4 @@ jobs:
       run: echo "FILE_COUNT=$( find ./frontend/assets/events -type f | wc -l)" >> $GITHUB_ENV
     - name: Remove oldest file
       if: env.FILE_COUNT > 2
-      uses: EndBug/add-and-commit@v9
-      with:
-        remove: '$(find ./frontend/assets/events ls -rt | head -n 1)'
+      run: echo "${{ env.FILE_COUNT }}"
