--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -39,4 +39,4 @@ jobs:
       if: env.FILE_COUNT > 2
       uses: EndBug/add-and-commit@v9
       with:
-        add: '${{ env.OLDEST_FILE }}'
+        remove: '${{ env.OLDEST_FILE }}'
