--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Get current date
       run: echo "STORED_DATE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+    - name: Get oldest file
+      run: echo "OLDEST_FILE=$(find ./frontend/assets/events -type f | sort | head -1)" >> $GITHUB_ENV
     - uses: actions/checkout@v3
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
