--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
     - name: Get current date
       run: echo "STORED_DATE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-    - name: Get oldest file
-      run: echo "OLDEST_FILE=$( find /frontend/assets/events-type f -printf '%T+ %p\n' | sort | head -n 1)" >> $GITHUB_ENV
     - uses: actions/checkout@v3
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -27,6 +25,8 @@ jobs:
       run: npm install -g convert-excel-to-json
     - name: Convert to JSON
       run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events-${{ env.STORED_DATE }}.json
+    - name: Find oldest file
+      run: echo "OLDEST_FILE=$( find ./frontend/assets/events -type f | head -n 1)" >> $GITHUB_ENV
     - name: Add new file
       uses: EndBug/add-and-commit@v9
       with:
