--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -25,9 +25,16 @@ jobs:
       run: npm install -g convert-excel-to-json
     - name: Convert to JSON
       run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events-${{ env.STORED_DATE }}.json
-    - name: Find oldest file
-      run: echo "OLDEST_FILE=$( find ./frontend/assets/events -type f | head -n 1)" >> $GITHUB_ENV
     - name: Add new file
       uses: EndBug/add-and-commit@v9
       with:
         add: './frontend/assets/events/events-${{ env.STORED_DATE }}.json'
+    - name: Find oldest file
+      run: echo "OLDEST_FILE=$( find ./frontend/assets/events -type f | head -n 1)" >> $GITHUB_ENV
+    - name: Count files
+      run: echo 'FILE_COUNT=$(find ./frontend/assets/events ls | wc -l)'
+    - name: Remove oldest file
+      if: env.FILE_COUNT > 2
+      uses: EndBug/add-and-commit@v9
+      with:
+        remove: '${{ env.OLDEST_FILE }}'
