--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -37,4 +37,4 @@ jobs:
       if: env.FILE_COUNT > 2
       uses: EndBug/add-and-commit@v9
       with:
-        remove: '${{ env.OLDEST_FILE }}'
+        remove: env.OLDEST_FILE
