--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -34,7 +34,6 @@ jobs:
     - name: Count files
       run: echo 'FILE_COUNT=$(find ./frontend/assets/events ls | wc -l)'
     - name: Remove oldest file
-      if: env.FILE_COUNT > 2
       uses: EndBug/add-and-commit@v9
       with:
-        remove: env.OLDEST_FILE
+        remove: $OLDEST_FILE
