--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -1,8 +1,14 @@
 name: Import GenCon Events
 
 on:
-  push:
-    branches: [ parse-json ]
+  schedule:
+    - cron: 0 0 * * *
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to update events'
+        type: environment
+        required: true
 
 jobs:
   import-json:
