taggerFinal tag new release draft

--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -34,11 +34,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
+
     # auto releases is not working atm and is deleting releases due branch tags
     - name: automatic-draft-release
       uses: marvinpinto/action-automatic-releases@v1.2.1
       with:
         draft: true
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        title: "${{ steps.tag.outputs.tag }}: [title-edit-me] by:${{ github.actor }}"
-        automatic_release_tag: ${{ steps.tag.outputs.new_tag }}
+        title: "${{ steps.taggerFinal.outputs.new_tag }}: [title-edit-me] by:${{ github.actor }}"
+        automatic_release_tag: ${{ steps.taggerFinal.outputs.new_tag }}
