--- a/.github/workflows/auto-tag-release.yml
+++ b/.github/workflows/auto-tag-release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - 59-bug-fix-auto-update-gencon-list
 jobs:
   Patch:
     runs-on: ubuntu-latest
@@ -10,13 +11,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: '0'
-    - name: Minor version for each merge
+    - name: Dry Run
       id: taggerDryRun
       uses: anothrNick/github-tag-action@1.36.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DRY_RUN: true
+        DEFAULT_BUMP: patch
 
     - name: echo new tag
       run: |
@@ -27,7 +29,7 @@ jobs:
     - name: echo part
       run: |
         echo "The version increment was: ${{ steps.taggerDryRun.outputs.part }}"
-    - name: Minor version for each merge
+    - name: Tag Real
       id: taggerFinal
       uses: anothrNick/github-tag-action@1.36.0
       env:
