--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "git": {
     "deploymentEnabled": {
-      "update-docs": false
+      "59-bug-fix-auto-update-gencon-list": false
     }
   }
 }
