import on branch

--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -1,6 +1,9 @@
 name: Import GenCon Events
 
 on:
+  push:
+    branches:
+      - 59-bug-fix-auto-update-gencon-list
   workflow_dispatch:
     inputs:
       environment:
