--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -34,10 +34,10 @@ jobs:
       run: curl https://www.gencon.com/downloads/events.zip -L -o events.zip
     - name: Unzip file
       run: 7z x events.zip
-    - name: Install convert-excel-to-json
-      run: npm install -g convert-excel-to-json
+    # - name: Install convert-excel-to-json
+    #   run: npm install -g convert-excel-to-json
     - name: Convert to JSON
-      run: convert-excel-to-json --sourceFile="events.xlsx" > ./frontend/assets/events/events.json
+      run: xlsx2json events.xlsx > ./frontend/assets/events/events.json
     - name: Add new file
       uses: EndBug/add-and-commit@v9
       with:
