--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,5 +3,8 @@
     "deploymentEnabled": {
       "59-bug-fix-auto-update-gencon-list": true
     }
-  }
+  },
+  "ignore": [
+    "Type error: Property value can only be string literal, numeric literal, 'true', 'false', 'null', object literal or array literal."
+  ]
 }
