--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,7 @@
 {
   "git": {
     "deploymentEnabled": {
-      "59-bug-fix-auto-update-gencon-list": true
-    },
-    "ignore": [
-      "Type error: Property value can only be string literal, numeric literal, 'true', 'false', 'null', object literal or array literal."
-    ]
+      "59-bug-fix-auto-update-gencon-list": false
+    }
   }
 }
