--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -64,5 +64,8 @@ jobs:
       with:
         remove: 'events.zip'
     - name: Run ParseData.js
-      run: node ./frontend/modules/parseData.js > ./frontend/assets/events/primeEvents.json |
-           echo ./frontend/assets/events/primeEvents.json >> ./frontend/assets/events/primeEvents.json
+      run: node ./frontend/modules/parseData.js > ./frontend/assets/events/primeEvents.json
+    - name: Add new file
+      uses: EndBug/add-and-commit@v9
+      with:
+        add: './frontend/assets/events/primeEvents.json'
