--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -1,11 +1,8 @@
 name: Import GenCon Events
 
 on:
-  # schedule:
-  #   - cron: 0 0 * * *
-  push:
-    branch:
-      - fix-linting-bug
+  schedule:
+    - cron: 0 0 * * *
   workflow_dispatch:
     inputs:
       environment:
