--- a/.github/workflows/import-gencon-events.yml
+++ b/.github/workflows/import-gencon-events.yml
@@ -1,8 +1,8 @@
 name: Import GenCon Events
 
 on:
-  schedule:
-    - cron: 0 0 * * *
+#   schedule:
+#     - cron: 0 0 * * *
   workflow_dispatch:
     inputs:
       environment:
