--- a/genconcal-backend/Cargo.toml
+++ b/genconcal-backend/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 env_logger = "0.11.3"
 log = "0.4.14"
 dotenv = "0.15.0"
-sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres" ] }
+sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
 serde = "1.0"
 serde_json = "1.0"
 thiserror = "1.0.31"
@@ -25,6 +25,7 @@ futures = "0.3.30"
 utoipa = { version = "4.2.0" }
 utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
 chrono = { version = "0.4.37", features = ["serde"] }
+chrono-tz = "0.8.6"
 
 [dev-dependencies]
 futures-core = "0.3.29"
