--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "sample-rest"
-version = "1.0.0"
+name = "genconcal_backend"
+version = "0.1.0"
 authors = ["Evan Rittenhouse"]
 edition = "2021"
 
