--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,8 +22,8 @@ tokio = { version = "1.19.2", features = ["full"] }
 async-trait = "0.1.68"
 anyhow = "1.0.70"
 futures = "0.3.30"
-utoipa = { version = "4.2.0" }
-utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
+utoipa = { version = "4.2.3", features = ["chrono"] }
+utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
 chrono = { version = "0.4.37", features = ["serde"] }
 chrono-tz = "0.8.6"
 fake = { version = "2.9.2", features = ["chrono", "chrono-tz", "derive"] }
@@ -33,7 +33,7 @@ rand = "0.8.5"
 futures-core = "0.3.29"
 hyper = "1.2.0"
 lazy_static = "1.4.0"
-mockall = "0.11.4"
+mockall = "0.13.0"
 rand = "0.8.5"
 speculoos = "0.11.0"
 tokio = { version = "1.19.2", features = ["sync"] }
