--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,35 +9,33 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.3"
 log = "0.4.14"
-dotenv = "0.15.0"
-sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
+dotenv = "0.15"
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
 serde = "1.0"
 serde_json = "1.0"
-thiserror = "1.0.31"
-derive_more = "0.99.17"
-validator = { version = "0.17.0", features = ["derive"] }
-axum = "0.7.4"
-axum-macros = "0.4.1"
-tokio = { version = "1.19.2", features = ["full"] }
-async-trait = "0.1.68"
-anyhow = "1.0.70"
-futures = "0.3.30"
-utoipa = { version = "4.2.3", features = ["chrono"] }
-utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
-chrono = { version = "0.4.37", features = ["serde"] }
-chrono-tz = "0.8.6"
-fake = { version = "2.9.2", features = ["chrono", "chrono-tz", "derive"] }
-rand = "0.8.5"
+derive_more = { version = "1.0", features = ["display", "error"] }
+validator = { version = "0.17", features = ["derive"] }
+axum = "0.7"
+axum-macros = "0.4"
+tokio = { version = "1.19", features = ["full"] }
+anyhow = "1.0"
+futures = "0.3"
+utoipa = { version = "4.2", features = ["chrono"] }
+utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
+chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.8"
+fake = { version = "2.9", features = ["chrono", "chrono-tz", "derive"] }
+rand = "0.8"
 
 [dev-dependencies]
-futures-core = "0.3.29"
-hyper = "1.2.0"
-lazy_static = "1.4.0"
-mockall = "0.13.0"
-rand = "0.8.5"
-speculoos = "0.11.0"
-tokio = { version = "1.19.2", features = ["sync"] }
-tower = "0.4.13"
+futures-core = "0.3"
+hyper = "1.2"
+lazy_static = "1.4"
+mockall = "0.13"
+rand = "0.8"
+speculoos = "0.11"
+tokio = { version = "1.19", features = ["sync"] }
+tower = "0.4"
 
 [features]
 integration_test = []
