--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.11.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 log = "0.4.14"
 dotenv = "0.15"
 sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
