--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,12 @@ edition = "2021"
 [dependencies]
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
+tracing-opentelemetry = {  version = "0.28.0", features = ["metrics"] }
+opentelemetry-otlp = { version = "0.27", features = ["metrics", "serialize"]}
+opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}
+opentelemetry = "0.27"
+tower = "0.5"
+tower-http = {version = "0.6", features = ["trace"]}
 log = "0.4.14"
 dotenv = "0.15"
 sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
