--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,6 +31,7 @@ opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}
 opentelemetry = "0.27"
 tower = "0.5"
 tower-http = {version = "0.6", features = ["trace"]}
+paste = "1.0.15"
 
 [dev-dependencies]
 futures-core = "0.3"
